Harris corner implementation

--- a/ExtractingText/CMakeLists.txt
+++ b/ExtractingText/CMakeLists.txt
@@ -7,7 +7,8 @@ include_directories(src/)
 file(GLOB SOURCES "src/*.cpp" 
                     "src/extract/*.cpp"
                     "src/app/impl/application/*.cpp"
-                    "src/app/impl/background/*.cpp")
+                    "src/app/impl/background/*.cpp"
+                    "src/app/impl/cv/*.cpp")
 
 add_executable( extract_text ${SOURCES} )
 target_link_libraries( extract_text ${OpenCV_LIBS} )
