Modeling example test

--- a/ExtractingText/CMakeLists.txt
+++ b/ExtractingText/CMakeLists.txt
@@ -8,7 +8,8 @@ file(GLOB SOURCES "src/*.cpp"
                     "src/extract/*.cpp"
                     "src/app/impl/application/*.cpp"
                     "src/app/impl/background/*.cpp"
-                    "src/app/impl/cv/*.cpp")
+                    "src/app/impl/cv/*.cpp"
+                    "src/examples/background/*.cpp")
 
 add_executable( extract_text ${SOURCES} )
 target_link_libraries( extract_text ${OpenCV_LIBS} )
