calculus trajectory of parametric equations

--- a/ExtractingText/CMakeLists.txt
+++ b/ExtractingText/CMakeLists.txt
@@ -25,6 +25,7 @@ file(GLOB SOURCES "src/*.cpp"
                     "src/app/impl/application/*.cpp"
                     "src/app/impl/application/background/*.cpp"
                     "src/app/impl/application/poultry/*.cpp"
+                    "src/app/impl/application/calculus/*.cpp"
                     "src/app/impl/background/*.cpp"
                     "src/app/impl/background/probability/*.cpp"
                     "src/app/impl/cv/*.cpp"
