visualization for houghline transform & add distance transform

--- a/ExtractingText/CMakeLists.txt
+++ b/ExtractingText/CMakeLists.txt
@@ -21,18 +21,61 @@ include_directories(src/libs)
 include_directories($ENV{BOOST_171_DIR})
 link_directories($ENV{BOOST_171_DIR}/libs)
 
+find_package(VTK COMPONENTS 
+              vtkChartsCore
+              vtkCommonCore
+              vtkCommonDataModel
+              vtkInteractionStyle
+              vtkRenderingContext2D
+              vtkRenderingContextOpenGL2
+              vtkRenderingCore
+              vtkRenderingFreeType
+              vtkRenderingGL2PSOpenGL2
+              vtkRenderingOpenGL2
+              vtkViewsContext2D QUIET)
+if (NOT VTK_FOUND)
+  message("Skipping LinePlot: ${VTK_NOT_FOUND_MESSAGE}")
+  return ()
+endif()
+message (STATUS "VTK_VERSION: ${VTK_VERSION}")
 
-file(GLOB SOURCES "src/*.cpp" 
-                    "src/extract/*.cpp"
-                    "src/app/impl/application/*.cpp"
-                    "src/app/impl/application/background/*.cpp"
-                    "src/app/impl/application/poultry/*.cpp"
-                    "src/app/impl/application/calculus/*.cpp"
-                    "src/app/impl/background/*.cpp"
-                    "src/app/impl/background/probability/*.cpp"
-                    "src/app/impl/cv/*.cpp"
-                    "src/app/impl/general/*.cpp"
-                    "src/app/examples/background/*.cpp")
+if (VTK_VERSION VERSION_LESS "8.90.0")
+  # Old system
+  include(${VTK_USE_FILE})
 
-add_executable( extract_text ${SOURCES} )
-target_link_libraries( extract_text ${OpenCV_LIBS} ${Boost_LIBRARIES})
+  file(GLOB SOURCES "src/*.cpp" 
+                      "src/extract/*.cpp"
+                      "src/app/impl/application/*.cpp"
+                      "src/app/impl/application/background/*.cpp"
+                      "src/app/impl/application/poultry/*.cpp"
+                      "src/app/impl/application/calculus/*.cpp"
+                      "src/app/impl/background/*.cpp"
+                      "src/app/impl/background/probability/*.cpp"
+                      "src/app/impl/cv/*.cpp"
+                      "src/app/impl/general/*.cpp"
+                      "src/app/examples/background/*.cpp")
+  add_executable( extract_text MACOSX_BUNDLE ${SOURCES} )
+  target_link_libraries( extract_text ${OpenCV_LIBS} ${Boost_LIBRARIES} ${VTK_LIBRARIES})
+
+else ()
+  # 
+  file(GLOB SOURCES "src/*.cpp" 
+                      "src/extract/*.cpp"
+                      "src/app/impl/application/*.cpp"
+                      "src/app/impl/application/background/*.cpp"
+                      "src/app/impl/application/poultry/*.cpp"
+                      "src/app/impl/application/calculus/*.cpp"
+                      "src/app/impl/background/*.cpp"
+                      "src/app/impl/background/probability/*.cpp"
+                      "src/app/impl/cv/*.cpp"
+                      "src/app/impl/general/*.cpp"
+                      "src/app/examples/background/*.cpp")
+
+  add_executable( extract_text MACOSX_BUNDLE ${SOURCES} )
+  target_link_libraries( extract_text ${OpenCV_LIBS} ${Boost_LIBRARIES} ${VTK_LIBRARIES})
+  vtk_module_autoinit(
+                      TARGETS extract_text
+                      MODULES ${VTK_LIBRARIES})
+endif ()
+
+
