--- a/ExtractingText/CMakeLists.txt
+++ b/ExtractingText/CMakeLists.txt
@@ -51,11 +51,14 @@ if (VTK_VERSION VERSION_LESS "8.90.0")
                       "src/app/impl/application/background/*.cpp"
                       "src/app/impl/application/poultry/*.cpp"
                       "src/app/impl/application/calculus/*.cpp"
+                      "src/app/impl/application/realworld/CitizenID/*.cpp"
+                      "src/app/impl/application/realworld/ExtractText/*.cpp"
                       "src/app/impl/background/*.cpp"
                       "src/app/impl/background/probability/*.cpp"
                       "src/app/impl/cv/*.cpp"
                       "src/app/impl/general/*.cpp"
-                      "src/app/examples/background/*.cpp")
+                      "src/app/examples/background/*.cpp"
+                      "src/app/test/cv/*.cpp")
   add_executable( extract_text MACOSX_BUNDLE ${SOURCES} )
   target_link_libraries( extract_text ${OpenCV_LIBS} ${Boost_LIBRARIES} ${VTK_LIBRARIES})
 
@@ -71,7 +74,8 @@ else ()
                       "src/app/impl/background/probability/*.cpp"
                       "src/app/impl/cv/*.cpp"
                       "src/app/impl/general/*.cpp"
-                      "src/app/examples/background/*.cpp")
+                      "src/app/examples/background/*.cpp"
+                      "src/app/test/cv/*.cpp")
 
   add_executable( extract_text MACOSX_BUNDLE ${SOURCES} )
   target_link_libraries( extract_text ${OpenCV_LIBS} ${Boost_LIBRARIES} ${VTK_LIBRARIES})
