--- a/ExtractingText/CMakeLists.txt
+++ b/ExtractingText/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 
+
 macro(use_cxx11)
   if (CMAKE_VERSION VERSION_LESS "3.1")
     if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
@@ -15,6 +16,9 @@ set (CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall")
 
 project( extract_text  )
+
+
+# set(OpenCV_DIR, /home/ducvd/setup/libraries/opencv/opencv430/opencv-4.3.0/Install)
 find_package( OpenCV REQUIRED )
 find_package(Boost COMPONENTS filesystem regex)
 
