--- a/ExtractingText/CMakeLists.txt
+++ b/ExtractingText/CMakeLists.txt
@@ -62,6 +62,7 @@ if (VTK_VERSION VERSION_LESS "8.90.0")
                       "src/app/impl/application/realworld/CitizenID/*.cpp"
                       "src/app/impl/application/realworld/ExtractText/*.cpp"
                       "src/app/impl/application/realworld/FaceApp/*.cpp"
+                      "src/app/impl/application/realworld/Camera/*.cpp"                      
                       "src/app/impl/cv/*.cpp"
                       "src/app/impl/general/*.cpp"
                       "src/app/examples/background/*.cpp"
@@ -82,6 +83,7 @@ else ()
                       "src/app/impl/application/realworld/CitizenID/*.cpp"
                       "src/app/impl/application/realworld/ExtractText/*.cpp"
                       "src/app/impl/application/realworld/FaceApp/*.cpp"                      
+                      "src/app/impl/application/realworld/Camera/*.cpp"
                       "src/app/impl/cv/*.cpp"
                       "src/app/impl/general/*.cpp"
                       "src/app/examples/background/*.cpp"
