--- a/ExtractingText/CMakeLists.txt
+++ b/ExtractingText/CMakeLists.txt
@@ -59,6 +59,7 @@ if (VTK_VERSION VERSION_LESS "8.90.0")
                       "src/app/impl/application/calculus/*.cpp"
                       "src/app/impl/background/*.cpp"
                       "src/app/impl/background/probability/*.cpp"
+                      "src/app/impl/background/calculus/*.cpp"
                       "src/app/impl/application/realworld/CitizenID/*.cpp"
                       "src/app/impl/application/realworld/ExtractText/*.cpp"
                       "src/app/impl/application/realworld/FaceApp/*.cpp"
@@ -80,6 +81,7 @@ else ()
                       "src/app/impl/application/calculus/*.cpp"
                       "src/app/impl/background/*.cpp"
                       "src/app/impl/background/probability/*.cpp"
+                      "src/app/impl/background/calculus/*.cpp"
                       "src/app/impl/application/realworld/CitizenID/*.cpp"
                       "src/app/impl/application/realworld/ExtractText/*.cpp"
                       "src/app/impl/application/realworld/FaceApp/*.cpp"                      
