--- a/VisionFundamental/src/CMakeLists.txt
+++ b/VisionFundamental/src/CMakeLists.txt
@@ -17,9 +17,12 @@ find_package( OpenCV REQUIRED )
 
 include_directories(VisionFundamental/)
 
-file(GLOB SOURCES "VisionFundamental/*.cpp" 
-                    "VisionFundamental/visionfund/impl/*.cpp"
+file(GLOB STATICLIBS "VisionFundamental/visionfund/impl/*.cpp"
                     "VisionFundamental/visionlab/impl/*.cpp")
 
-add_executable( visonfund ${SOURCES} )
-target_link_libraries( visonfund ${OpenCV_LIBS} )
+file(GLOB SOURCES "VisionFundamental/main.cpp")
+                    
+
+add_executable( visionfund ${SOURCES} )
+add_library(libvisionfund STATIC ${STATICLIBS})
+target_link_libraries(visionfund libvisionfund ${OpenCV_LIBS})
